🚀 Complete all functions!

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/takara2314/awareshe.git"
   },
-  "author": "takara2314, kosakae256",
+  "author": "kosakae256, takara2314",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/takara2314/awareshe/issues"
